# Paradox-Platform

./: .gitignore  CMakeLists.txt  README.md  build.json  library.cmake  makefile  setup.py
.github/: github-pages.yml
.github/workflows/: c-cpp.yml
api/c/: CMakeLists.txt  io.c
api/c/include/paradox-platform/: char.h  conv.h  defines.h  io.h
api/c/paradox-platform/include/paradox-platform/: characters.h  common.h  console.h  conv.h  defines.h  file_system.h  float16.h  io.h  numerics.h  os.h  sized_types.h  string.h
api/c/paradox-platform/src/: char.c  characters.c  conv.c  file_system.c  float16.c  io.c  numerics.c  string.c
api/c/paradox-platform/src/paradox-platform/: characters.c  file_system.c  numerics.c  string.c
api/c/paradox-platform/tests/: unit_testing.c
api/c/paradox-platform/tests/include/: numerics_1_a_tests.h  numerics_1_b_tests.h  numerics_1_c_tests.h  numerics_1_d_tests.h  numerics_1_e_tests.h  unit_tests.h
api/c/paradox-platform/tests/src/: numerics_1_a_tests.c  numerics_1_b_tests.c  numerics_1_c_tests.c  numerics_1_d_tests.c  numerics_1_e_tests.c  unit_tests.c  unit_tests_entry.c
api/c/src/: char.c  conv.c  io.c
api/cpp/: CMakeLists.txt  io.cpp
api/cpp/include/paradox-platform/: defines.hpp  io.hpp
api/cpp/paradox-platform/include/paradox-platform/: defines.hpp  io.hpp
api/cpp/paradox-platform/src/: io.cpp
api/cpp/paradox-platform/src/paradox-platform/: io.cpp
api/cpp/paradox-platform/tests/: unit_testing.cpp
api/swift/: CMakeLists.txt  main.swift
cmake/: googletest.cmake  settings.cmake  unity.cmake
config/make/: build-commands.mk
source/c/: CMakeLists.txt  io.c
source/c++/: CMakeLists.txt  io.cpp
source/c++/include/paradox-platform/: io.hpp
source/c++/paradox-platform/: defines.hpp
source/c/include/paradox-platform/: defines.h  io.h
source/c/paradox-platform/: defines.h
tests/: c++_tests.makefile  c_tests.makefile  tests.c  tests.cpp
tests/c/: CMakeLists.txt  unit_testing.c
tests/c++/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  unit_testing.cpp
